# LinkForge---ROS2-Four-Bar-Linkage-Simulator

./: README.md  RViz2_final_video.webm  four_bar_linkage.f3d  four_bar_linkage.urdf  install_ros2.sh
four_bar_linkage_ws/: build_and_run.sh
four_bar_linkage_ws/install/: local_setup.sh  setup.sh
four_bar_linkage_ws/install/four_bar_linkage/lib/four_bar_linkage/: joint_state_publisher
four_bar_linkage_ws/install/four_bar_linkage/share/four_bar_linkage/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
four_bar_linkage_ws/install/four_bar_linkage/share/four_bar_linkage/config/: rviz_config.rviz
four_bar_linkage_ws/install/four_bar_linkage/share/four_bar_linkage/launch/: display.launch.py
four_bar_linkage_ws/install/four_bar_linkage/share/four_bar_linkage/meshes/: Component1_Component2.stl  Component1_Component3.stl  Component1_Component4.stl  Component1_Component5.stl
four_bar_linkage_ws/log/: latest_build
four_bar_linkage_ws/src/four_bar_linkage/: package.xml  setup.cfg  setup.py
four_bar_linkage_ws/src/four_bar_linkage/config/: rviz_config.rviz
four_bar_linkage_ws/src/four_bar_linkage/four_bar_linkage/: __init__.py  joint_state_publisher.py
four_bar_linkage_ws/src/four_bar_linkage/launch/: display.launch.py
four_bar_linkage_ws/src/four_bar_linkage/meshes/: Component1_Component2.stl  Component1_Component3.stl  Component1_Component4.stl  Component1_Component5.stl
four_bar_linkage_ws/src/four_bar_linkage/urdf/: four_bar_linkage.urdf
(+1 files in other folders)
